// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-1") with early-web/budget-airline matches snapshot 1`] = `
{
  "closureReason": "Superseded by competitor",
  "siteName": "ApexExpress",
  "statusLabel": "Domain expired",
  "summary": "Before the big carriers dropped their prices, ApexExpress filled the gap. Students, retirees, and weekend travelers packed its flights, drawn by fares that seemed too good to be real — and occasionally were.",
  "tagline": undefined,
  "yearFounded": 1996,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-1") with startup-minimalism/media-startup matches snapshot 1`] = `
{
  "closureReason": "Superseded by competitor",
  "siteName": "Freigrund Technik",
  "statusLabel": "Domain expired",
  "summary": "The pitch was simple: Freigrund Technik would treat creators like partners, not products. Monthly reports showed exactly where revenue came from, and the 85/15 split was the best in the industry while it lasted.",
  "tagline": "Where content comes alive",
  "yearFounded": 2015,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-1") with web2/mmorpg-guild matches snapshot 1`] = `
{
  "closureReason": "Superseded by competitor",
  "siteName": "EmberKnights",
  "statusLabel": "Domain expired",
  "summary": "The EmberKnights forums were almost as famous as the guild itself. Recruitment threads turned into essays, boss kill posts became short stories, and the off-topic section had a cult following.",
  "tagline": undefined,
  "yearFounded": 2008,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-2") with early-web/budget-airline matches snapshot 1`] = `
{
  "closureReason": "Shut down after data breach incident",
  "siteName": "PrimeRoute",
  "statusLabel": "Domain expired",
  "summary": "PrimeRoute offered affordable flights across Europe and beyond. At its peak, the airline served over 40 destinations from three hub airports and was known for its aggressive last-minute deals.",
  "tagline": "Fly for less",
  "yearFounded": 1999,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-2") with startup-minimalism/media-startup matches snapshot 1`] = `
{
  "closureReason": "Shut down after data breach incident",
  "siteName": "FreshHub",
  "statusLabel": "Domain expired",
  "summary": "FreshHub was a digital media platform for independent creators. The service offered ad-free hosting, audience analytics, and a revenue-sharing model that attracted thousands of podcasters and video essayists before funding dried up.",
  "tagline": "Create without limits",
  "yearFounded": 2019,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-2") with web2/mmorpg-guild matches snapshot 1`] = `
{
  "closureReason": "Shut down after data breach incident",
  "siteName": "NobleFury",
  "statusLabel": "Domain expired",
  "summary": "NobleFury — a legendary guild forged in the fires of battle. Founded during the first month of the server's launch, the guild grew from five friends in a dorm room to over two hundred active raiders.",
  "tagline": "We raid at dawn",
  "yearFounded": 2013,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-3") with early-web/budget-airline matches snapshot 1`] = `
{
  "closureReason": "Hosting provider went offline",
  "siteName": "DirectWay",
  "statusLabel": "Content removed at owner's request",
  "summary": "Before the big carriers dropped their prices, DirectWay filled the gap. Students, retirees, and weekend travelers packed its flights, drawn by fares that seemed too good to be real — and occasionally were.",
  "tagline": "Fly for less",
  "yearFounded": 1996,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-3") with startup-minimalism/media-startup matches snapshot 1`] = `
{
  "closureReason": "Hosting provider went offline",
  "siteName": "WavePad",
  "statusLabel": "Content removed at owner's request",
  "summary": "The pitch was simple: WavePad would treat creators like partners, not products. Monthly reports showed exactly where revenue came from, and the 85/15 split was the best in the industry while it lasted.",
  "tagline": "The future of entertainment",
  "yearFounded": 2015,
}
`;

exports[`US-017: Snapshot regression tests > generateMetadata snapshots > generateMetadata("us017-meta-3") with web2/mmorpg-guild matches snapshot 1`] = `
{
  "closureReason": "Hosting provider went offline",
  "siteName": "AncientWolf",
  "statusLabel": "Content removed at owner's request",
  "summary": "The AncientWolf forums were almost as famous as the guild itself. Recruitment threads turned into essays, boss kill posts became short stories, and the off-topic section had a cult following.",
  "tagline": "We raid at dawn",
  "yearFounded": 2009,
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-1" and archetype "e-commerce-shop" matches snapshot 1`] = `
{
  "archetype": "e-commerce-shop",
  "companyName": "DiscountPick",
  "domain": "discountpick.com",
  "tagline": "Your online marketplace",
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-1" and archetype "os-vendor" matches snapshot 1`] = `
{
  "archetype": "os-vendor",
  "companyName": "IntegratedNet",
  "domain": "integratednet.com",
  "tagline": "Built for the next generation",
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-1" and archetype "personal-homepage" matches snapshot 1`] = `
{
  "archetype": "personal-homepage",
  "companyName": "AwesomeZone",
  "domain": "awesomezone.com",
  "tagline": "Best viewed in 800×600",
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-2" and archetype "e-commerce-shop" matches snapshot 1`] = `
{
  "archetype": "e-commerce-shop",
  "companyName": "SuperTrove",
  "domain": "supertrove.com",
  "tagline": undefined,
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-2" and archetype "os-vendor" matches snapshot 1`] = `
{
  "archetype": "os-vendor",
  "companyName": "HexWorks",
  "domain": "hexworks.com",
  "tagline": undefined,
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-2" and archetype "personal-homepage" matches snapshot 1`] = `
{
  "archetype": "personal-homepage",
  "companyName": "AboutLair",
  "domain": "aboutlair.com",
  "tagline": undefined,
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-3" and archetype "e-commerce-shop" matches snapshot 1`] = `
{
  "archetype": "e-commerce-shop",
  "companyName": "TrustedFind",
  "domain": "trustedfind.com",
  "tagline": "Shopping made effortless",
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-3" and archetype "os-vendor" matches snapshot 1`] = `
{
  "archetype": "os-vendor",
  "companyName": "SolidBase",
  "domain": "solidbase.com",
  "tagline": "Rethinking the operating system",
}
`;

exports[`US-017: Snapshot regression tests > generateName snapshots > generateName with seed "us017-name-3" and archetype "personal-homepage" matches snapshot 1`] = `
{
  "archetype": "personal-homepage",
  "companyName": "DigitalSpace",
  "domain": "digitalspace.com",
  "tagline": "Sign my guestbook!",
}
`;

exports[`US-017: Snapshot regression tests > generateSite pipeline snapshots > generateSite("us017-snap-alpha") matches snapshot 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Logo failed to load]",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Featured on TechCrunch",
    },
  ],
  "archetypeId": "e-commerce-shop",
  "eraId": "startup-minimalism",
  "metadata": {
    "closureReason": "Could not compete with free alternatives",
    "siteName": "TrustedStash",
    "statusLabel": "Account suspended",
    "summary": "TrustedStash was one of the first online shops to offer a no-questions-asked return window of sixty days. The logistics were a nightmare, but the trust it built with customers was worth it.",
    "tagline": undefined,
    "yearFounded": 2019,
  },
  "regionId": "en-gb",
  "themeId": "startup-minimalism",
}
`;

exports[`US-017: Snapshot regression tests > generateSite pipeline snapshots > generateSite("us017-snap-beta") matches snapshot 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-badge",
      "id": "outdated-copyright",
      "label": "Copyright 2004 — All rights reserved",
    },
    {
      "cssClass": "abandonment-partner-logos",
      "id": "defunct-partner-logo",
      "label": "Certified by NexusTrust Authority",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "expired-ssl-notice",
      "label": "Security certificate expired on 08/28/2006",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "stale-news-date",
      "label": "Last updated: 11/10/2013",
    },
  ],
  "archetypeId": "media-startup",
  "eraId": "alt-timeline",
  "metadata": {
    "closureReason": "Key team members departed",
    "siteName": "FeedMix Digital",
    "statusLabel": "Site decommissioned",
    "summary": "FeedMix Digital brought stories to life through innovative digital media. Its signature feature was a collaborative editing suite that let multiple creators remix and annotate each other's work in real time.",
    "tagline": "Where content comes alive",
    "yearFounded": 2016,
  },
  "regionId": "en-us",
  "themeId": "alt-timeline",
}
`;

exports[`US-017: Snapshot regression tests > generateSite pipeline snapshots > generateSite("us017-snap-delta") matches snapshot 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-counter",
      "id": "dead-counter",
      "label": "Join 1989 others on the waitlist",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "expired-ssl-notice",
      "label": "Security certificate expired on 08/14/2015",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Verified on Product Hunt",
    },
  ],
  "archetypeId": "budget-airline",
  "eraId": "startup-minimalism",
  "metadata": {
    "closureReason": "Acquired and shut down",
    "siteName": "SwiftSpan",
    "statusLabel": "This site has been permanently closed",
    "summary": "SwiftSpan ran flights out of secondary airports most people had never heard of. The bus ride to the terminal was part of the adventure, and somehow that became the brand.",
    "tagline": "Low fares, high standards",
    "yearFounded": 2018,
  },
  "regionId": "de-de",
  "themeId": "startup-minimalism",
}
`;

exports[`US-017: Snapshot regression tests > generateSite pipeline snapshots > generateSite("us017-snap-epsilon") matches snapshot 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-badge",
      "id": "stale-news-date",
      "label": "Last updated: 09/17/2019",
    },
    {
      "cssClass": "abandonment-partner-logos",
      "id": "defunct-partner-logo",
      "label": "Certified by NexusTrust Authority",
    },
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Image not found]",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Rendered via subether relay v0.4",
    },
  ],
  "archetypeId": "webmail-provider",
  "eraId": "alt-timeline",
  "metadata": {
    "closureReason": "Company dissolved",
    "siteName": "Freigrund",
    "statusLabel": "Domain expired",
    "summary": "Freigrund provided secure webmail trusted by millions of users. Its server-side spam filtering was considered best-in-class, and the clean interface loaded quickly even on dial-up connections.",
    "tagline": "The smarter way to email",
    "yearFounded": 2005,
  },
  "regionId": "de-de",
  "themeId": "alt-timeline",
}
`;

exports[`US-017: Snapshot regression tests > generateSite pipeline snapshots > generateSite("us017-snap-gamma") matches snapshot 1`] = `
{
  "abandonmentDetails": [
    {
      "cssClass": "abandonment-missing-asset",
      "id": "missing-asset-placeholder",
      "label": "[Image not found]",
    },
    {
      "cssClass": "abandonment-browser-notice",
      "id": "expired-ssl-notice",
      "label": "Security certificate expired on 06/20/2009",
    },
    {
      "cssClass": "abandonment-badge",
      "id": "broken-badge",
      "label": "Rendered via subether relay v0.4",
    },
  ],
  "archetypeId": "personal-homepage",
  "eraId": "alt-timeline",
  "metadata": {
    "closureReason": "Ran out of funding",
    "siteName": "FunPad",
    "statusLabel": "Service discontinued",
    "summary": "Hi! This is FunPad, my personal homepage on the web. You will find my resume, a collection of photography from my trips, and a blog I started and then mostly forgot about.",
    "tagline": "Thanks for stopping by!",
    "yearFounded": 2011,
  },
  "regionId": "en-gb",
  "themeId": "alt-timeline",
}
`;

exports[`US-017: Snapshot regression tests > selectTheme snapshots > selectTheme for era "alt-timeline" matches snapshot 1`] = `
{
  "label": "Strange Alternate Timeline",
  "themeId": "alt-timeline",
}
`;

exports[`US-017: Snapshot regression tests > selectTheme snapshots > selectTheme for era "early-web" matches snapshot 1`] = `
{
  "label": "Early Web",
  "themeId": "early-web",
}
`;

exports[`US-017: Snapshot regression tests > selectTheme snapshots > selectTheme for era "portal-era" matches snapshot 1`] = `
{
  "label": "Portal Era",
  "themeId": "portal-era",
}
`;

exports[`US-017: Snapshot regression tests > selectTheme snapshots > selectTheme for era "startup-minimalism" matches snapshot 1`] = `
{
  "label": "Startup Minimalism",
  "themeId": "startup-minimalism",
}
`;

exports[`US-017: Snapshot regression tests > selectTheme snapshots > selectTheme for era "web2" matches snapshot 1`] = `
{
  "label": "Web 2.0",
  "themeId": "web2",
}
`;
